salesforce_ant_45.0/sample/codepkg/objects/Ordered_Items__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Price__c</fullName>
        <label>Actual Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AddOn_Price__c</fullName>
        <label>AddOn Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Discount__c</fullName>
        <label>Item Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Item_Image__c</fullName>
        <label>Item Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Id__c</fullName>
        <label>Offer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offered_Price__c</fullName>
        <description>Key  ---&gt;  Unit Price</description>
        <label>Offered Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Ordered Itmes</relationshipLabel>
        <relationshipName>Ordered_Itmes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <label>Taxes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>10.5</fullName>
                </value>
                <value>
                    <fullName>7.9</fullName>
                </value>
                <value>
                    <fullName>8.9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Id__c</fullName>
        <label>Unit Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ordered Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered Itmes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>